--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Advanced JavaScript</title>
-    <script src="./script.js"></script>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./style.css" />
+
+    <script src="./script.js" defer></script>
+  </head>
+  <body>
+    <form action="">
+      <div class="form-control">
+        <label for="name">Product Name</label>
+        <div class="form-input">
+            <input type="text" name="name" id="name" maxlength="15" /> 
+            <p><span id="remaining-count">15</span>/15</p>
+        </div>
+      </div>
+      <button>Submit</button>
+    </form>
+  </body>
 </html>
